{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 15,
  "lineage": "b75c6fa8-c0c2-eb05-f068-901b1789aa98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194c3e07668a7e36",
            "arn": "arn:aws:ec2:eu-west-2:346544221247:instance/i-0a678c231f8eb6c50",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0a678c231f8eb6c50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "faskey2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-040bca517044aa8da",
            "private_dns": "ip-172-31-7-188.eu-west-2.compute.internal",
            "private_ip": "172.31.7.188",
            "public_dns": "ec2-18-133-255-93.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.255.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b31c5820445d5ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Jenkins - Allow web traffic"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-46cafd2f",
            "tags": {
              "Name": "Jenkins_Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Jenkins_Server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b301995858d78685"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_security_group.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:346544221247:internet-gateway/igw-05caa347a20895b7a",
            "id": "igw-05caa347a20895b7a",
            "owner_id": "346544221247",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-0485233cdfa837577"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:346544221247:route-table/rtb-07df174458f985f37",
            "id": "rtb-07df174458f985f37",
            "owner_id": "346544221247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05caa347a20895b7a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-public"
            },
            "tags_all": {
              "Name": "jenkins-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0485233cdfa837577"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins-vpc",
            "aws_internet_gateway.jenkins-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-public-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051adb820091b2ece",
            "route_table_id": "rtb-07df174458f985f37",
            "subnet_id": "subnet-0b8322f367ad887cd"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_internet_gateway.jenkins-igw",
            "aws_route_table.jenkins-rt-public",
            "aws_subnet.jenkins-public-subnets",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:346544221247:security-group/sg-0b301995858d78685",
            "description": "Allow ssh and standard http/https ports inbound and everything outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b301995858d78685",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Jenkins - Allow web traffic",
            "name_prefix": "",
            "owner_id": "346544221247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-5cfdd034"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:346544221247:subnet/subnet-0b8322f367ad887cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b8322f367ad887cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346544221247",
            "tags": {
              "Name": "jenkins-tf-public-1"
            },
            "tags_all": {
              "Name": "jenkins-tf-public-1"
            },
            "vpc_id": "vpc-0485233cdfa837577"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:346544221247:vpc/vpc-0485233cdfa837577",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019d3e955142d5eeb",
            "default_route_table_id": "rtb-042389823e36b3a6a",
            "default_security_group_id": "sg-0f0a632b1fa531ce4",
            "dhcp_options_id": "dopt-611b1f09",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0485233cdfa837577",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042389823e36b3a6a",
            "owner_id": "346544221247",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}